@@ -24,8 +24,10 @@
  */
 package co.elastic.apm.agent.rabbitmq;
 
+import com.rabbitmq.client.Channel;
 import org.springframework.amqp.core.Message;
 import org.springframework.amqp.core.MessageListener;
+import org.springframework.amqp.rabbit.listener.api.ChannelAwareMessageListener;
 
 import javax.annotation.Nullable;
 
@@ -35,7 +37,11 @@ public class MessageListenerHelper {
     public MessageListener registerAndWrapLambda(@Nullable MessageListener listener) {
         if (listener != null) {
             if (listener.getClass().getName().contains("/")) {
-                listener = new MessageListenerWrapper(listener);
+                if (listener instanceof ChannelAwareMessageListener) {
+                    listener = new ChannelAwareMessageListenerWrapper((ChannelAwareMessageListener) listener);
+                } else {
+                    listener = new MessageListenerWrapper(listener);
+                }
             }
             SpringAmqpTransactionNameUtil.register(listener);
         }
@@ -48,6 +54,25 @@ public class MessageListenerHelper {
 
         public MessageListenerWrapper(MessageListener delegate) {
             this.delegate = delegate;
+        }
+
+        @Override
+        public void onMessage(Message message) {
+            delegate.onMessage(message);
+        }
+    }
+
+    public static class ChannelAwareMessageListenerWrapper implements ChannelAwareMessageListener {
+
+        private final ChannelAwareMessageListener delegate;
+
+        public ChannelAwareMessageListenerWrapper(ChannelAwareMessageListener delegate) {
+            this.delegate = delegate;
+        }
+
+        @Override
+        public void onMessage(Message message, Channel channel) throws Exception {
+            delegate.onMessage(message, channel);
         }
 
         @Override
