@@ -27,19 +27,16 @@ package co.elastic.apm.agent.rabbitmq.config;
 import co.elastic.apm.agent.rabbitmq.TestConstants;
 import org.springframework.amqp.rabbit.annotation.EnableRabbit;
 import org.springframework.amqp.rabbit.annotation.RabbitListener;
-import org.springframework.amqp.rabbit.config.SimpleRabbitListenerContainerFactory;
-import org.springframework.amqp.rabbit.connection.ConnectionFactory;
-import org.springframework.amqp.support.converter.Jackson2JsonMessageConverter;
-import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 @Configuration
 @EnableRabbit
-public class RabbitListenerConfiguration extends CommonRabbitListenerConfiguration {
+public class ReplyRabbitListenerConfiguration extends CommonRabbitListenerConfiguration {
 
     @RabbitListener(queues = TestConstants.QUEUE_NAME)
-    public void processMessage(String message) {
+    public String processMessage(String message) {
         testSpan();
+        return "reply";
     }
 
 }
