@@ -47,6 +47,7 @@ setting `disable_instrumentations=jdbc` would disable jdbc and also enable exper
 [float]
 ===== Bug fixes
 * Fix NPE with `null` binary header values + properly serialize them - {pull}1842[#1842]
+* Fix `ListenerExecutionFailedException` when using Spring AMQP's ReplyTo container - {pull}1872[#1872]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
